--- a/src/main/resources/assets/henrysuper/lang/en_US.lang
+++ b/src/main/resources/assets/henrysuper/lang/en_US.lang
@@ -1,2 +1,4 @@
 tile.henrysuper_cement.name=Cement Block
 item.henrysuper_itemcement.name=Cement Item
+tile.henrysuper_blastproofGlass.name=Blastproof Glass Block
+item.henrysuper_itemblastproofGlass.name=Blastproof Glass Item
